# zombie-game

./: .gitignore  CMakeLists.txt  TODO.txt
shaders/: heightmap.frag  heightmap.vert  shader.frag  shader.vert
zombie-client/: CMakeLists.txt  MainClient.cpp  input.cpp  input.hpp  window.cpp  window.hpp
zombie-client/engine/: debugcamera.cpp  debugcamera.hpp  heightmap.cpp  heightmap.hpp
zombie-client/gameplay/: DebugPlayerController.cpp  DebugPlayerController.hpp
zombie-client/graphics/: camera.hpp  heightmapmesh.cpp  heightmapmesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
zombie-server/: CMakeLists.txt  MainServer.cpp
zombie-shared/: CMakeLists.txt
zombie-shared/engine/: ClientManager.cpp  ClientManager.hpp  Engine.cpp  Engine.hpp  SystemManager.cpp  SystemManager.hpp  Transform.hpp
zombie-shared/entity/: ComponentContainer.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityNetworking.cpp  EntityNetworking.hpp
zombie-shared/gameplay/management/: DebugCameraSystem.cpp  DebugCameraSystem.hpp  PlayerEntitySystem.cpp  PlayerEntitySystem.hpp  RenderSystem.hpp
zombie-shared/network/: ComponentNetworking.hpp  Connection.cpp  Connection.hpp  NetworkAddress.hpp  NetworkSystem.cpp  NetworkSystem.hpp  Networking.cpp  Networking.hpp  PacketTypes.hpp
zombie-shared/tests/: benchmarks.cpp  tests.cpp
zombie-shared/util/: BitField.cpp  BitField.hpp  Event.hpp  FrameLimiter.cpp  FrameLimiter.hpp  HostType.cpp  HostType.hpp  IntTypes.hpp  Log.cpp  Log.h  LogLifetime.hpp  Math.hpp  TypeId.hpp  TypeSafeId.hpp  Underlying.hpp
